--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
     <div>
         <footer>
-            <div class="copyright">Copyright <a href="https://" target="blank"><span>&copy;&nbsp;Igor Borkowskih</span>
+            <div class="copyright">Copyright <a href="https://github.com/Igor19910729/Pracktik_4_html.css" target="blank"><span>&copy;&nbsp;Igor Borkowskih</span>
             </a>, 2022</div>
         </footer>
     </div>
